--- a/index.html
+++ b/index.html
@@ -40,22 +40,44 @@
   </section>
 
   <!-- -----------SURVEY------------ -->
-  <header>
-    <h1>Satisfaction Survey</h1>
-    <div class="date"></div>
-  </header>
-  <section class="congrats-section">
-    <h3 class="congrats-text">
-      Congratulations!
-    </h3>
-    <p class="text">
-      Please tell us about your Wholesale shopping experiences and as a thank
-      you, you can select from several exclusive offer rewards!
-      <p class="text">User Reference: <span class="customer-number">159824</span></p>
-    </p>
-    <div class="line"></div>
-  </section>
-  <form id="survey"></form>
+  <main class="survey-main">
+    <header>
+      <h1>Satisfaction Survey</h1>
+      <div class="date"></div>
+    </header>
+    <section class="congrats-section">
+      <h3 class="congrats-text">
+        Congratulations!
+      </h3>
+      <p class="text">
+        Please tell us about your Wholesale shopping experiences and as a thank
+        you, you can select from several exclusive offer rewards!
+        <p class="text">User Reference: <span class="customer-number">159824</span></p>
+      </p>
+      <div class="line"></div>
+    </section>
+    <form id="survey"></form>
+  </main>
+
+
+  <main class="offer-wall-main">
+    <section>
+      <header>
+        <h1>Satisfaction Survey</h1>
+        <div class="date"></div>
+      </header>
+      <section class="congrats-section">
+        <h3 class="congrats-text">
+          Thank You!
+        </h3>
+        <p class="text">
+          Please tell us about your Wholesale shopping experiences and as a thank
+          you, you can select from several exclusive offer rewards!
+      </section>
+      <section class="offer-wall">
+
+      </section>
+  </main>
   <script src="index.js"></script>
 </body>
 
