hiding survery to work on offerwall

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
     <form id="survey"></form>
   </main>
 
+  <!-- -----------OFFER WALL------------ -->
 
   <main class="offer-wall-main">
     <section>
@@ -71,11 +72,9 @@
           Thank You!
         </h3>
         <p class="text">
-          Please tell us about your Wholesale shopping experiences and as a thank
-          you, you can select from several exclusive offer rewards!
+          With sincere thanks, you may now choose (1) of the following exclusive offer rewards below.
       </section>
       <section class="offer-wall">
-
       </section>
   </main>
   <script src="index.js"></script>
