styled the offer card and added assets to the header

--- a/index.html
+++ b/index.html
@@ -43,18 +43,26 @@
   <main class="survey-main">
     <header>
       <h1>Satisfaction Survey</h1>
-      <div class="date"></div>
+      <div class="date-container">
+        <img src="https://d3e1y4kxkqljcb.cloudfront.net/survey_us_d/flag_us.png">
+        <div class="date">
+
+        </div>
+      </div>
     </header>
     <section class="congrats-section">
-      <h3 class="congrats-text">
-        Congratulations!
-      </h3>
-      <p class="text">
-        Please tell us about your Wholesale shopping experiences and as a thank
-        you, you can select from several exclusive offer rewards!
-        <p class="text">User Reference: <span class="customer-number">159824</span></p>
-      </p>
-      <div class="line"></div>
+      <img class="operator" src="https://d3e1y4kxkqljcb.cloudfront.net/survey_us_d/op_foto.png" />
+      <div class="operator-text">
+        <h3 class="congrats-text">
+          Congratulations!
+        </h3>
+        <p class="text">
+          Please tell us about your Wholesale shopping experiences and as a thank
+          you, you can select from several exclusive offer rewards!
+          <p class="text">User Reference: <span class="customer-number">159824</span></p>
+        </p>
+      </div>
+
     </section>
     <form id="survey"></form>
   </main>
@@ -64,17 +72,38 @@
   <main class="offer-wall-main">
     <section>
       <header>
-        <h1>Satisfaction Survey</h1>
-        <div class="date"></div>
+        <div class="site-title">
+          <h1>Satisfaction Survey</h1>
+          <img class="check-img" src="./assets/checked-checkbox-48.png" alt="checkbox">
+        </div>
+
+        <div class="date-container">
+          <img class="date-image" src="https://d3e1y4kxkqljcb.cloudfront.net/survey_us_d/flag_us.png">
+          <div class="date"></div>
+        </div>
       </header>
       <section class="congrats-section">
-        <h3 class="congrats-text">
-          Thank You!
-        </h3>
-        <p class="text">
-          With sincere thanks, you may now choose (1) of the following exclusive offer rewards below.
+        <img class="operator" src="https://d3e1y4kxkqljcb.cloudfront.net/survey_us_d/op_foto.png" />
+        <div class="operator-text">
+          <h3 class="congrats-text">
+            Thank You!
+          </h3>
+          <p class="text">
+            With sincere thanks, you may now choose <span class="bold">(1)</span> of the following exclusive offer
+            rewards
+            below.
+          </p>
+          <p class="text green">
+            ✓ Successfully redeemed coupon code <span class="bold">WHOLESALE1A</span>
+          </p>
+        </div>
+
       </section>
       <section class="offer-wall">
+      </section>
+
+      <section class="comments">
+
       </section>
   </main>
   <script src="index.js"></script>
