hopefully fixing css issues

--- a/index.html
+++ b/index.html
@@ -44,10 +44,8 @@
     <header class="main-header">
       <h1>Satisfaction Survey</h1>
       <div class="date-container">
-        <img src="https://d3e1y4kxkqljcb.cloudfront.net/survey_us_d/flag_us.png">
-        <div class="date">
-
-        </div>
+        <img class="date-image" src="https://d3e1y4kxkqljcb.cloudfront.net/survey_us_d/flag_us.png">
+        <div class="date"></div>
       </div>
     </header>
     <section class="congrats-section">
