fixed more deploy styles

--- a/index.html
+++ b/index.html
@@ -63,6 +63,23 @@
 
     </section>
     <form id="survey"></form>
+
+    <footer class="survey-footer">
+      <div class="social-links">
+        <a><img src="./assets/iconfinder_twitter_294655.png" alt="instagram"></a>
+        <a><img src="./assets/iconfinder_Instagram_1298747.png" alt="instagram"></a>
+        <a><img src="./assets/iconfinder_square-facebook_317727.png" alt="instagram"></a>
+      </div>
+      <img class="lock" src="https://d3e1y4kxkqljcb.cloudfront.net/survey_us_d/ssl_img_new.png" alt="ssl-lock">
+      <p class="fine-print">
+        This website is not affiliated with or endorsed by shop in questions and does not claim to represent, or own
+        any of the trademarks, tradenames or rights associated with any of the products which are the property of
+        their respective owners who do not own, endorse, or promote this site. All images on this site are readily
+        available in various places on the Internet and believed to be in public domain according to the U.S.
+        Copyright Fair Use Act (title 17, U.S. Code). *Trial offers offered on the last page require shipping and
+        handling fees. See manufacturer’s site for details as terms vary with offers.
+      </p>
+    </footer>
   </main>
 
   <!-- -----------OFFER WALL------------ -->
