--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
   <!-- -----------SURVEY------------ -->
   <main class="survey-main">
     <header class="main-header">
-      <h1>Satisfaction Survey</h1>
+      <div class="site-title">
+        <h1>Satisfaction Survey</h1>
+        <img class="check-img" src="./assets/checked-checkbox-48.png" alt="checkbox">
+      </div>
       <div class="date-container">
         <img class="date-image" src="https://d3e1y4kxkqljcb.cloudfront.net/survey_us_d/flag_us.png">
         <div class="date"></div>
