changed operator position on offer wall

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           <div class="date"></div>
         </div>
       </header>
-      <section class="congrats-section">
+      <section class="thank-you-section">
         <img class="operator" src="https://d3e1y4kxkqljcb.cloudfront.net/survey_us_d/op_foto.png" />
         <div class="operator-text">
           <h3 class="congrats-text">
