--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="stylesheet" type="text/css" href="reset.css" />
   <link rel="stylesheet" type="text/css" href="styles.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Survey</title>
 </head>
 
@@ -120,11 +121,14 @@
       <section class="offer-wall">
       </section>
 
-      <section class="comment-section">
+      <article class="comment-container">
         <header class="comment-header">
           <h3 class="bold">How was your survey experience?</h3>
         </header>
-      </section>
+        <ul class="comment-list">
+
+        </ul>
+      </article>
 
       <footer class="main-footer">
         <div class="social-links">
