--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <section class="modal">
     <div class="modal-content">
       <div class="modal-text-container">
-        <h2 class="congrats-text">
+        <h2 class="modal-congrats bold">
           Congratulations!
         </h2>
         <p class="modal-text">
