moved around css files not sure if keeping it

--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <link rel="stylesheet" type="text/css" href="reset.css" />
-  <link rel="stylesheet" type="text/css" href="styles.css" />
+  <link rel="stylesheet" type="text/css" href="./styles/reset.css" />
+  <link rel="stylesheet" type="text/css" href="./styles/modal.css" />
+  <link rel="stylesheet" type="text/css" href="./styles/comments.css" />
+  <link rel="stylesheet" type="text/css" href="./styles/offer-wall.css" />
+  <link rel="stylesheet" type="text/css" href="./styles/survey.css" />
+  <link rel="stylesheet" type="text/css" href="./styles/header-footer-mobile.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Survey</title>
 </head>
